; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_table.c_get_column_size.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_table.c_get_column_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.table = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@COL_TYPE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.table*, i64)* @get_column_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_column_size(%struct.table* %0, i64 %1) #0 {
  %3 = alloca %struct.table*, align 8
  %4 = alloca i64, align 8
  store %struct.table* %0, %struct.table** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.table*, %struct.table** %3, align 8
  %6 = getelementptr inbounds %struct.table, %struct.table* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @COL_TYPE_MASK, align 4
  %13 = and i32 %11, %12
  %14 = call i64 @get_type_size(i32 %13)
  ret i64 %14
}

declare dso_local i64 @get_type_size(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
